# prideful

./: Cargo.toml  README.md
config/: flags.json
src/: config.rs  flag.rs  flags.txt  main.rs
