[package]
name = "prideful"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A YAML-configurable command-line Pride flag generator."
homepage = "https://github.com/angelofallars/prideful"
documentation = "https://github.com/angelofallars/prideful/blob/main/README.md"
repository = "https://github.com/angelofallars/prideful"
readme = "https://github.com/angelofallars/prideful/raw/main/README.md"

keywords = ["pride", "terminal", "cli", "yaml", "lgbt"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.12"
termion = "1.5"
colored = "2"
xdg = "^2.1"
clap = "~2.27.0"
yaml-rust = "0.4"
directories = "4.0"
